--- a/control_page/controls.html
+++ b/control_page/controls.html
@@ -77,16 +77,19 @@
             function toggleKey(keyCode, isPressed) {
                 // Left
                 if (keyCode == 37) {
-                    isPressed;eys['left'] = isPressed;
+                    isPressedKeys['left'] = isPressed;
                 }
+                // Up
                 else if (keyCode == 38) {
-                    isPressed;eys['up'] = isPressed;
+                    isPressedKeys['up'] = isPressed;
                 }
+                // Right
                 else if (keyCode == 39) {
-                    isPressed;eys['false'] = isPressed;
+                    isPressedKeys['right'] = isPressed;
                 }
+                // Down
                 else if (keyCode == 40) {
-                    isPressed;eys['down'] = isPressed;
+                    isPressedKeys['down'] = isPressed;
                 }
                 else {
                     return false;
