I fail at regex

--- a/control_page/controls.html
+++ b/control_page/controls.html
@@ -77,19 +77,19 @@
             function toggleKey(keyCode, isPressed) {
                 // Left
                 if (keyCode == 37) {
-                    isPressedKeys['left'] = isPressed;
+                    pressedKeys['left'] = isPressed;
                 }
                 // Up
                 else if (keyCode == 38) {
-                    isPressedKeys['up'] = isPressed;
+                    pressedKeys['up'] = isPressed;
                 }
                 // Right
                 else if (keyCode == 39) {
-                    isPressedKeys['right'] = isPressed;
+                    pressedKeys['right'] = isPressed;
                 }
                 // Down
                 else if (keyCode == 40) {
-                    isPressedKeys['down'] = isPressed;
+                    pressedKeys['down'] = isPressed;
                 }
                 else {
                     return false;
