--- a/control_page/controls.html
+++ b/control_page/controls.html
@@ -1,6 +1,7 @@
 <HTML>
     <HEAD><TITLE>DOOMBA</TITLE></HEAD>
     <BODY>
+        <object type="application/x-shockwave-flash" data="http://www.justin.tv/widgets/live_embed_player.swf?channel=natthew" id="live_embed_player_flash" height="300" width="400" bgcolor="#000000"><param name="allowFullScreen" value="true"/><param name="allowScriptAccess" value="always" /><param name="allowNetworking" value="all" /><param name="movie" value="http://www.justin.tv/widgets/live_embed_player.swf" /><param name="flashvars" value="hostname=www.justin.tv&channel=natthew&auto_play=false&start_volume=25" /></object><a href="http://www.justin.tv/natthew#r=-rid-&amp;s=em" class="trk" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline; text-align:center">Watch live video from natthew on www.justin.tv</a>
         <script>
             var server = '10.12.5.29:8081';
 
