Added a reset doomba button

--- a/control_page/controls.html
+++ b/control_page/controls.html
@@ -22,6 +22,9 @@
             function goRight() {
                 sendCommand('/right');
             }
+            function reset() {
+                sendCommand('/reset');
+            }
             function forwardTurnRight() {
                 return;
             }
@@ -127,5 +130,9 @@
         </p>
         <p> <a href='#' onclick='stop()'> STOP! </a> </p>
         <p> <a href='#' onclick='fire()'> FIRE! </a> </p>
+        <br>
+        <br>
+        <br>
+        <p> <a href='#' onclick='reset()'> reset the doomba </a> </p>
     </BODY>
 </HTML>
