Adding car turning/forward controls

--- a/control_page/controls.html
+++ b/control_page/controls.html
@@ -23,10 +23,10 @@
                 sendCommand('/right');
             }
             function forwardTurnRight() {
-                return;
+                sendCommand('/forward_right');
             }
             function forwardTurnLeft() {
-                return;
+                sendCommand('/forward_left');
             }
 
             function stop() {
