--- a/control_page/controls.html
+++ b/control_page/controls.html
@@ -67,10 +67,10 @@
                     goBackward();
                 }
                 else if (pressedKeys['left']) {
-                    turnLeft();
+                    goLeft();
                 }
                 else if (pressedKeys['right']) {
-                    turnRight();
+                    goRight();
                 }
                 else {
                     stop();
